# roster

./: .gitignore  README.md  SPEC.md  pyproject.toml
roster/: __init__.py  assign.py  cli.py  config.py  decompose.py  llm.py  models.py  prompts.py  review.py  run.py
