[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roster"
version = "0.1.0"
description = "Manage parallel AI agent development runs"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "requests>=2.32",
    "rich>=13",
    "questionary>=2.0",
]

[project.scripts]
roster = "roster.cli:app"

[project.urls]
Repository = "https://github.com/merlinkraemer/roster"

[tool.hatch.build.targets.wheel]
packages = ["roster"]
